Rename application to Auralytics and update all references: - Update application name in package.json and README.md - Change title and content in public/index.html - Update all remaining references to 'Transcription App' in the codebase

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#0ea5e9" />
     <meta
       name="description"
-      content="Transcription App - A modern web application for live speech transcription with speaker diarization and AI-powered analysis."
+      content="Auralytics - A modern web application for live speech transcription with speaker diarization and AI-powered analysis."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Transcription App</title>
+    <title>Auralytics</title>
     
     <!-- Add Inter font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
